--- a/FlightControlWeb/appsettings.json
+++ b/FlightControlWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=SqlitDatabase.db;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
