--- a/FlightControlWeb/appsettings.json
+++ b/FlightControlWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=SqlitDatabase.db;Trusted_Connection=True;"
+    "DefaultConnection": "DataSource=SqlitDatabase.db;"
   },
   "Logging": {
     "LogLevel": {
