--- a/FlightControlWeb/appsettings.json
+++ b/FlightControlWeb/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "https://localhost:5554"
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
