--- a/FlightControlWeb/appsettings.json
+++ b/FlightControlWeb/appsettings.json
@@ -12,7 +12,7 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "https://localhost:5554"
+        "Url": "http://localhost:55079"
       }
     }
   },
